--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -184,25 +184,30 @@
 		</tbody>
 		<tbody>
 			<tr>
-				<th scope="row" rowspan="4">7</th>
-				<td rowspan="4">29 listopada 2024</td>
+				<th scope="row" rowspan="5">7</th>
+				<td rowspan="5">29 listopada 2024</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Noemi Matuszczak</td>
+				<td class="schedule-presentation">powodzie</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Katarzyna Gajda</td>
+				<td class="schedule-presentation">współpraca Korei z ONZ</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Aleksandra Przęczek</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 4</td>
+				<td class="schedule-presentation">Diana Grigoryan - kultura megalityczna</td>
 				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 5</td>
+				<td class="schedule-presentation">Sofiia Martynenko - kuchnia koreańska w czasie wojny koreańskiej</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 		</tbody>
@@ -233,24 +238,24 @@
 			<tr>
 				<th scope="row" rowspan="4">10</th>
 				<td rowspan="4">20 grudnia 2024</td>
-				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
 				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Karolina Żmuda</td>
+				<td class="schedule-presentation">Seongsu jako „najfajniejsza dzielnica świata”</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Bogdan Borawski - techno-orientalizm</td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Martyna Zboch</td>
+				<td class="schedule-presentation">polityka zagraniczna Korei Płd. wobec UE</td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Praca domowa 9</td>
+				<td class="schedule-presentation">Wiktoria Puchała</td>
+				<td class="schedule-presentation">sprawa kryminalna Jeong Yu-jeong</td>
 			</tr>
 		</tbody>
 		<tbody>
