--- a/uj/zajecia/24-25z/wats3-2/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/2/index.html
@@ -41,11 +41,29 @@
 <h3>번역</h3>
 
 <p>0. 동거녀 살해 후 시멘트로 암매장…집 공사 중 16년만에 들통</p>
+<ul>
+	<li>Zabił partnerkę i ukrył jej ciało w cemencie - zbrodnia odkryta po 16 latach podczas remontu domu</li>
+</ul>
 <p>1-1. 동거하던 여자친구를 무참하게 살해 후 시멘트를 부어 시신을 은닉했던 50대가</p>
+<ul>
+	<li>50-kilkuletni mężczyzna w okrutny sposób zamordował swoją dziewczynę, po czym zalał ciało cementem.</li>
+</ul>
 <p>1-2. 16년 만에 범행이 발각돼 구속됐다.</p>
+<ul>
+	<li>Został on aresztowany, dopiero gdy zbrodnia wyszła na jaw po 16 latach.</li>
+</ul>
 <p>2-1. 23일 경남경찰청과 거제경찰서에 따르면</p>
+<ul>
+	<li>Według informacji podanych 23 września przez policjantów z Komendy Policji w prowincji Gyeongsang Południowy i komisariatu w mieście Geoje,</li>
+</ul>
 <p>2-2. A(58)씨는 2008년 10월 10일 오후 2∼3시께 거제시 한 원룸 옥탑방 주거지에서</p>
+<ul>
+	<li>58-letni mężczyzna 10 października 2008 r. między godziną 14 a 15 w mieście Geoje w swoim jednopokojowym mieszkaniu w przybudówce na dachu budynku</li>
+</ul>
 <p>2-3. 당시 동거녀인 30대 B 씨와 다투다 둔기로 B 씨 머리와 얼굴을 폭행해 살해했다.</p>
+<ul>
+	<li>w czasie kłótni ze swoją 30-kilkuletnią partnerką uderzył ją w twarz i głowę tępym narzędziem, doprowadzając do jej śmierci.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -70,10 +88,25 @@
 <h3>번역</h3>
 
 <p>3-1. 이후 B 씨 시신을 여행용 천 가방에 넣은 뒤 주거지 옆 야외 베란다로 옮겨</p>
+<ul>
+	<li>Następnie ciało umieścił w materiałowej walizce i przeniósł na werandę obok swojego mieszkania.</li>
+</ul>
 <p>3-2. 벽돌을 쌓고 두께 10㎝가량 시멘트를 부어 은닉했다.</p>
+<ul>
+	<li>Zabudował walizkę cegłami i zalał cementem na grubość około 10 cm.</li>
+</ul>
 <p>4-1. A 씨는 시멘트 속에 B 씨 시신을 은닉한 뒤에도</p>
+<ul>
+	<li>Już po ukryciu ciała partnerki w cemencie mężczyzna</li>
+</ul>
 <p>4-2. 마약 투약으로 구속된 2016년까지</p>
+<ul>
+	<li>aż do 2016 r., kiedy został aresztowany za przyjmowanie narkotyków,</li>
+</ul>
 <p>4-3. 범행을 저지른 집에서 8년가량 지냈다.</p>
+<ul>
+	<li>mieszkał przez prawie 8 lat w mieszkaniu, w którym popełnione zostało to przestępstwo.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -98,6 +131,9 @@
 <p>5-1. 이 같은 A 씨 범행은</p>
 <p>5-2. 지난달 누수공사를 위해 콘크리트 구조물 파쇄 작업을 하던 작업자가</p>
 <p>5-3. 시신이 담긴 여행용 가방을 발견하면서 드러났다.</p>
+<ul>
+	<li>Zbrodnia została wykryta przez robotników, którzy podczas usuwania betonowej konstrukcji w celu naprawy przecieku wody odnaleźli w środku walizkę z ciałem kobiety.</li>
+</ul>
 <p>6. 범행 16년 만이다.</p>
 <p>7-1. 신고 받고 전담 수사팀을 꾸린 경찰은</p>
 <p>7-2. 숨진 B 씨가 실종 신고된 것을 확인하고 수사를 벌여오다</p>
@@ -136,6 +172,8 @@
 <p>10. 그러나 시신 은닉은 공소시효가 지나 혐의에 적용되지 않았다.</p>
 <p>11. 앞서 A 씨는 B 씨 가족이 2011년께 경찰에 B 씨 실종 신고를 낸 것과 관련해 참고인 조사를 한차례 받은 적이 있다.</p>
 
+<h2 class="homework">Praca domowa</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -163,6 +201,9 @@
 <p>13. 참고인 조사 당시 A 씨는 "B 씨와 헤어졌다"고 경찰에 진술했다.</p>
 <p>14-1. 경찰 조사 결과 A 씨는 1998년 부산의 한 나이트클럽에서 일하다가 B 씨와 교제를 시작했고,</p>
 <p>14-2. B 씨가 숨지기 전까지 5년가량 동거하다가 이 같은 범행을 저질렀다.</p>
+
+<hr class="homework">
+
 <p>15-1. 경찰은 A 씨가 범행을 시인했고,</p>
 <p>15-2. 조사 과정에서 필로폰 투약 사실이 확인돼</p>
 <p>15-3. 여죄를 확인하고 있다고 밝혔다.</p>
