--- a/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/2/index.html
@@ -55,10 +55,25 @@
 <h3>번역</h3>
 
 <p>0. "교도소 급식만도 못하네"…소방관 '3000원대 부실급식' 충격</p>
+<ul>
+	<li>"Jedzenie gorsze niż w więzieniu" – szok z powodu niskiej jakości posiłków strażaków za około 3000 wonów</li>
+</ul>
 <p>1. 소방 공무원들이 실제로 먹고 있는 급식 사진이 온라인상에 확산했다.</p>
+<ul>
+	<li>Prawdziwe zdjęcia posiłków spożywanych przez strażaków zostały udostępnione w Internecie.</li>
+</ul>
 <p>2. 이로 인해 부실 급식 논란이 불거졌다.</p>
+<ul>
+	<li>Wywołały one dużo kontrowersji wokół niskiej jakości jedzenia.</li>
+</ul>
 <p>3. 심한 경우는 한 끼 단가가 3000원 수준에 그친 곳도 있다고 확인됐다.</p>
+<ul>
+	<li>Potwierdzone zostały niechlubne przypadki jednostek, gdzie koszt przygotowania jednego posiłku stał na poziomie 3000 wonów.</li>
+</ul>
 <p>4. 소방관 처우 개선이 시급하다는 지적이 나온다.</p>
+<ul>
+	<li>Pojawiają się głosy, iż należy niezwłocznie poprawić złe traktowanie strażaków.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -79,11 +94,26 @@
 <h3>번역</h3>
 
 <p>5-1. 소방청으로부터 받은 자료에 따르면</p>
+<ul>
+	<li>Według danych otrzymanych otrzymanych z Komendy Głównej Straży Pożarnej,</li>
+</ul>
 <p>5-2. 전국 소방서 중 단가가 가장 낮은 곳은 대구 A 소방서로 3112원이었다.</p>
+<ul>
+	<li>spośród jednostek straży pożarnej z całego kraju w jednostce w Daegu odnotowany najniższy koszt posiłku wynoszący 3112 wonów.</li>
+</ul>
 <p>6. 경남 B 소방서(3852원), 전북 C 소방서(3920원)가 그 다음으로 낮았다.</p>
+<ul>
+	<li>W następnej kolejności była jednostka w prowincji Gyeongsang Południowy na poziomie 3852 wonów oraz jednostka w prowincji Jeolla Północna na poziomie 3920 wonów.</li>
+</ul>
 <p>7. 소방청에서 전국 241개 소방서 가운데 지역별 1곳의 급식단가를 표본조사한 결과다.</p>
+<ul>
+	<li>Są to wyniki badania przeprowadzonego przez Komendę Główna Straży Pożarnej, w którym wybrano po jednej jednostce z każdego regionu spośród 241 jednostek straży pożarnej z całego kraju.</li>
+</ul>
 <p>8-1. ▶전남 D 소방서 ▶강원 E 소방서 ▶울산 F 소방서 ▶서울 G 소방서는 한 끼 급식 단가가 4000원대로,</p>
 <p>8-2. 편의점 도시락에도 미치지 못하는 가격으로 드러났다.</p>
+<ul>
+	<li>Okazało się, że w jednostkach z prowincji Jeolla Południowa, prowincji Gangwon, miasta Ulsan oraz Seulu koszt przygotowania jednego posiłku wynosił około 4000 wonów i był niższy nawet niż ceny dań instant serwowanych w niewielkich sklepów spożywczych.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -143,6 +173,8 @@
 <p>14-3. 현업 근무자(3교대 근무자)의 경우 한 달 30식(하루 세끼)을 기준으로 하다 보니</p>
 <p>14-4. 한 끼 단가가 크게 떨어지는 영향도 있는 것으로 분석된다.</p>
 
+<h2 class="homework">Praca domowa</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -171,6 +203,8 @@
 <p>18. 공개한 실제 소방관들의 급식 사진은 온라인상에서 논란이 되고 있다.</p>
 <p>19-1. 네티즌들은 법무부가 공개했던 교도소 급식, 방송에 공개됐던 구치소 급식 사진과 소방관 급식 사진을 비교하면서</p>
 <p>19-2. “소방관들이 범죄자들보다 더 못 먹고 있다”, “저런 부실한 밥을 먹고 화재 진압하러 가는 거냐”는 등의 반응을 보였다.</p>
+
+<hr class="homework">
 
 <h2>Źródło:</h2>
 
