--- a/uj/zajecia/25-26z/licc/lectures/2/index.html
+++ b/uj/zajecia/25-26z/licc/lectures/2/index.html
@@ -724,16 +724,10 @@ correct (<i>zheng</i> 正). If you lead by correcting yourself, who would dare t
 	<p>Let perfect balance and harmony be realized and heaven and earth will find their proper places therein; and, the ten thousand creatures will be nourished therein.</p>
 </blockquote>
 
-<h3>2-1.</h3>
-
-<blockquote class="bookquote">
-	<p>Confucius said, “The superior man maintains perfect balance and keeps to the constant; the small man turns his back on perfect balance and the constant.”</p>
-</blockquote>
-
 <h3>2-2.</h3>
 
 <blockquote class="bookquote">
-	<p>2. The superior man maintains perfect balance and keeps to the constant because, as a superior man, he accords with circumstances in finding the perfect balance. The small man turns his back on perfect balance and the constant because, as a small man, he is devoid of fear and restraint.</p>
+	<p>Confucius said, “The superior man maintains perfect balance and keeps to the constant because, as a superior man, he accords with circumstances in finding the perfect balance. The small man turns his back on perfect balance and the constant because, as a small man, he is devoid of fear and restraint.”</p>
 </blockquote>
 
 <h3>3-1.</h3>
@@ -757,7 +751,7 @@ correct (<i>zheng</i> 正). If you lead by correcting yourself, who would dare t
 <h3>13-3.</h3>
 
 <blockquote class="bookquote">
-	<p>Being true to himself and empathetic toward others he keeps near to the Way.32 What he does not wish done to him he does not do unto others.</p>
+	<p>Being true to himself and empathetic toward others he keeps near to the Way. What he does not wish done to him he does not do unto others.</p>
 </blockquote>
 
 <h3>13-4.</h3>
@@ -799,7 +793,7 @@ correct (<i>zheng</i> 正). If you lead by correcting yourself, who would dare t
 <h3>20-9.</h3>
 
 <blockquote class="bookquote">
-	<p>9. “Some are born knowing it [the universal Way of the world]; others know it through study; and still others know it only through painful effort. But in knowing it they are the same. Some practice it with ease; others practice it with an eye to the benefits it will bring; and still others force themselves to practice it. But in their achievement of it, they are the same.”</p>
+	<p>“Some are born knowing it [the universal Way of the world]; others know it through study; and still others know it only through painful effort. But in knowing it they are the same. Some practice it with ease; others practice it with an eye to the benefits it will bring; and still others force themselves to practice it. But in their achievement of it, they are the same.”</p>
 </blockquote>
 
 <h3>20-10.</h3>
