--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
@@ -188,10 +188,25 @@
 <h3>번역</h3>
 
 <p>13. 정치적 성향에 따른 한국인의 분열은 상당한 수준이다.</p>
+<ul>
+	<li>Istnieje wyraźny podział wśród Koreańczyków wynikający z różnic w poglądach politycznych.</li>
+</ul>
 <p>14-1. 2023년 한국행정연구원의 ‘사회통합실태조사’에 따르면</p>
+<ul>
+	<li>Zgodnie z „Badaniem stanu integracji społecznej” przeprowadzonym w 2023 r. przez Koreański Instytut Administracji Publicznej</li>
+</ul>
 <p>14-2. 국민 10명 중 6명(58.2%)은 정치적 성향이 다를 경우 연애 및 결혼을 할 수 없다고 답했다. </p>
+<ul>
+	<li>6 na 10 Koreańczyków (58,2%) odpowiedziało, że nie byliby w stanie związać się lub poślubić osoby o odmiennych poglądach politycznych.</li>
+</ul>
 <p>15. 학력이 짧고 소득수준이 낮을수록 배척 성향이 강하게 나타났다.</p>
+<ul>
+	<li>Bardzo widoczna była zależność między niskim wykształceniem i niskimi dochodami a tendencją do wykluczania ze względu na poglądy.</li>
+</ul>
 <p>16. 학력별로 중졸 이하는 71.45%가 정치 성향이 다른 사람과의 교제를 거부했고 고졸은 55.6%, 대졸 이상은 54.49%이 그렇게 응답했다.</p>
+<ul>
+	<li>W zależności od poziomu wykształcenia 71,45% osób z wykształceniem gimnazjalnym, 55,6% ze wykształceniem średnim oraz 54,49% z wykształceniem wyższym odrzuciło możliwość wejścia w związek z osobami o innych poglądach. </li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -206,10 +221,15 @@
 <h3>번역</h3>
 
 <p>17. 소득 수준으로는 가장 낮은 1분위의 61.37%가 배척 성향을 보였고 2분위는 60.1%, 3분위 56.66%, 4분위 55.26%, 5분위 51.89% 순이었다.</p>
+<ul>
+	<li>Ze względu na wysokość dochodów wykazano, że 61,37% osób z pierwszej, najniższej grup dochodowej, 60,1% z drugiej, 56,66% z trzeciej, 55,26% z czwartej oraz 51,89% z piątej, najwyższej grupy wykazało tendencję do wykluczenia innych ze względu na poglądy polityczne.</li>
+</ul>
 <p>18. 소득이 높을수록 그나마 교제를 거부하는 비율이 낮아진 것이다.</p>
 <p>19. 연령별로는 나이가 많을수록 거부 비율이 높았다.</p>
 <p>20. ‘청년’은 51.81%가 정치 성향이 다르면 연애 및 결혼이 안 된다고 답했고, ‘중장년’은 56.62%, ‘노년’은 68.64%가 배척 성향을 보였다.</p>
 <p>21. 정치 성향이 다른 친구∙지인과는 술 자리를 갖지 않는다는 응답은 33.02%로 나타났다.</p>
+
+<h2 class="homework">숙제</h2>
 
 <h3>어휘</h3>
 
@@ -230,6 +250,8 @@
 <p>23. 재혼정보업체 온리-유, 결혼정보회사 비에나래가 지난해 1월 발표한 조사에 따르면,</p>
 <p>24. 남성 응답자는 여성의 ‘경제 관념’(29.5%)이 가장 중요하다고 답했고 ‘자녀관’(23.6%), ‘정치 성향’(18.7%), ‘가사에 대한 인식’(15.1%)이 뒤를 이었다. </p>
 <p>25. 남녀가 소개팅하기 전에 ‘어느 당을 지지하는지’를 묻는 풍속도 생겨난 상태라고 한다.</p>
+
+<hr>
 
 <h3>어휘</h3>
 
