--- a/uj/zajecia/25-26z/assk/testy/1/index57438554393.html
+++ b/uj/zajecia/25-26z/assk/testy/1/index57438554393.html
@@ -5,7 +5,7 @@
 	<title>Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
-	<base href="https://twilczynski.com/">
+	<base href="file://C:/Users/TW86/Desktop/Praca/Uniwersytet%20Jagielloński/WWW/">
 	<link rel="icon" href="data:,">
 	<link rel="stylesheet" href="uj/.res/all.css">
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
