--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -143,21 +143,21 @@
 				<th rowspan="2" scope="row">8</th>
 				<td rowspan="2">2025년 12월 3일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/3">文 글월 문</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">9</th>
 				<td rowspan="2">2025년 12월 10일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/3">시험지 3</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/4">食 밥 식</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">10</th>
