--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
@@ -159,14 +159,20 @@
 		<td>고대 희랍의 <strong>문화(文化)</strong>는 유럽 문명의 기원이다.</td>
 	</tr>
 	<tr>
-		<td>文化</td>
-		<td>(언어, 배우다, 이해하다)</td>
-		<td></td>
+		<td rowspan="2">文化</td>
+		<td rowspan="2">(언어, 배우다, 이해하다)</td>
+		<td>나라의 <strong>문화(文化)</strong>를 잘 이해하기 위해서는 언어를 배우는 것이 좋다.</td>
 	</tr>
 	<tr>
-		<td>文具店</td>
-		<td>(학교 앞, 공책과 볼펜)</td>
-		<td></td>
+		<td>언어를 배우면 <strong>문화(文化)</strong>를 더 쉽게 이해할 수 있어요.</td>
+	</tr>
+	<tr>
+		<td rowspan="2">文具店</td>
+		<td rowspan="2">(학교 앞, 공책과 볼펜)</td>
+		<td>학생들은 학용품을 잊어버리면 학교 앞에 있는 <strong>문구점(文具店)</strong>에서 공책과 볼펜을 저렴하게 구매할 수 있어요.</td>
+	</tr>
+	<tr>
+		<td>오늘은 우리 학교 앞에서 <strong>문구점(文具店)</strong>을 열었으니까 새로운 공책과 볼펜을 사러 갑시다.</td>
 	</tr>
 </table>
 
