--- a/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
@@ -13,6 +13,10 @@
 
 <h1>한국어 1급<br><br>0과. 한글을 배워요</h1>
 
+<div>
+	<a href="viiilo/zajecia/25-26/jk1/pliki/0과.%20한글을%20배워요.pdf">0과. 한글을 배워요.pdf</a>
+</div>
+
 <h2>교과서</h2>
 
 <ul>
