--- a/viiilo/zajecia/25-26/jk1/zajecia/2/index.html
+++ b/viiilo/zajecia/25-26/jk1/zajecia/2/index.html
@@ -13,6 +13,10 @@
 
 <h1>한국어 1급<br><br>1과. 안녕하세요? 저는 안나예요</h1>
 
+<div>
+	<a href="viiilo/zajecia/25-26/jk1/pliki/1과.%20안녕하세요%20저는%20안나예요.pdf">1과. 안녕하세요 저는 안나예요.pdf</a>
+</div>
+
 <h2>교과서</h2>
 
 <ul>
