--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -116,51 +116,47 @@
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/24-25l/klc2/class/10">10과. 취미가 같은 사람을 만나고 싶었어요</a></td>
 			</tr>
 			<tr>
-				<th scope="row">9</th>
-				<td>6월 17일</td>
-				<td class="schedule-exam">시험</td>
-				<td class="schedule-exam" colspan="2">기말 시험 <nobr>(?, -1.15호)</nobr></td>
+				<th scope="row" rowspan="10">9</th>
+				<td rowspan="10">6월 17일</td>
+				<td class="schedule-exam" rowspan="10">시험</td>
+				<td class="schedule-exam" colspan="2">기말 시험 <nobr>(9:30–11:00, -1.15호)</nobr></td>
 			</tr>
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam" rowspan="10">시험</td> -->
-				<!-- <td class="schedule-exam" colspan="2">중간 시험 <nobr>(11:30–13:00, -1.15호)</nobr></td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">11:30–11:40</td> -->
-				<!-- <td class="schedule-exam">Łoś Karol</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">11:40–11:50</td> -->
-				<!-- <td class="schedule-exam">Mądra Maria</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">11:50–12:00</td> -->
-				<!-- <td class="schedule-exam">Trajdos Julia</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:00–12:10</td> -->
-				<!-- <td class="schedule-exam">Grabowska Patrycja</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:10–12:20</td> -->
-				<!-- <td class="schedule-exam">Baranowski Michał</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:20–12:30</td> -->
-				<!-- <td class="schedule-exam">Mirowska Agnieszka</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:30–12:40</td> -->
-				<!-- <td class="schedule-exam">Savitska Viktoriia</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:40-12:50</td> -->
-				<!-- <td class="schedule-exam">Kruszewska Maja</td> -->
-			<!-- </tr> -->
-			<!-- <tr> -->
-				<!-- <td class="schedule-exam">12:50–13:00</td> -->
-				<!-- <td class="schedule-exam">Dubert Karolina</td> -->
-			<!-- </tr> -->
+			<tr>
+				<td class="schedule-exam">9:30–9:40</td>
+				<td class="schedule-exam">Mądra Maria</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:40–9:50</td>
+				<td class="schedule-exam">Mirowska Agnieszka</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:50–10:00</td>
+				<td class="schedule-exam">Savitska Viktoriia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:00–10:10</td>
+				<td class="schedule-exam">Trajdos Julia</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:10–10:20</td>
+				<td class="schedule-exam">Baranowski Michał</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:20–10:30</td>
+				<td class="schedule-exam">Łoś Karol</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:30–10:40</td>
+				<td class="schedule-exam">Dubert Karolina</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:40-10:50</td>
+				<td class="schedule-exam">Kruszewska Maja</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:50–11:00</td>
+				<td class="schedule-exam">Grabowska Patrycja</td>
+			</tr>
 		</tbody>
 	</table>
 </div>
