--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -157,7 +157,7 @@
 			<tr>
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">28 maja 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/3"-->Kolokwium 2<!--/a--></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/2">Kolokwium 2</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
