--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -163,7 +163,7 @@
 				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">20 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 5</td>
-				<td class="schedule-presentation">Paweł Opyrchał</td>
+				<td class="schedule-presentation">Paweł Opyrchał - Rytuały pogrzebowe i pamięć o zmarłych w Polsce i Korei: od Wszystkich Świętych do <i>Jesa</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
@@ -175,7 +175,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
-				<td class="schedule-presentation">Natalia Nowak</td>
+				<td class="schedule-presentation">Natalia Nowak - Propaganda w Korei Północnej i czasach PRL</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 9</td>
@@ -205,7 +205,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 15</td>
-				<td class="schedule-presentation">Jan Krzyżaniak</td>
+				<td class="schedule-presentation">Jan Krzyżaniak - Porównanie architektury i zabudowy wsi w Polsce i Korei</td>
 			</tr>
 		</tbody>
 	</table>
