--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -158,7 +158,7 @@
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 January 2026</td>
 				<td class="schedule-presentation">Presentation 5</td>
-				<td class="schedule-presentation">Wiktoria Wabik</td>
+				<td class="schedule-presentation">Wiktoria Wabik - Confucianism vs. Individualism: Value Conflicts in Modern Korean Society</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 6</td>
@@ -170,7 +170,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 8</td>
-				<td class="schedule-presentation">Magdalena Luzar</td>
+				<td class="schedule-presentation">Magdalena Luzar - Connection between e-sports and Confucian ideas</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 9</td>
@@ -188,7 +188,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 12</td>
-				<td class="schedule-presentation">Aleksandra Janowska</td>
+				<td class="schedule-presentation">Aleksandra Janowska - Women reconciling paid and unpaid work in a Confucian welfare state: the case of South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 13</td>
