--- a/viiilo/zajecia/24-25z/jk1/zajecia/8/index.html
+++ b/viiilo/zajecia/24-25z/jk1/zajecia/8/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/css/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom podstawowy<br><br>4과. 한국어를 사랑해요</h1>
+<h1>Język koreański - poziom podstawowy<br><br>4과. 한국어를 공부해요</h1>
 
 <h2>교과서</h2>
 
