--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -100,64 +100,44 @@
 			<tr>
 				<th scope="row">15</th>
 				<td>6 marca 2025</td>
-				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8">4과. 한국어를 공부해요</a></td>
-				<td class="schedule-presentation" rowspan="3"><!--a href="viiilo/zajecia/24-25z/jk1/zajecia/8-1"></a--></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/8">4과. 한국어를 공부해요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">16</th>
-				<td>13 marca 2025</td>
+				<td>10 kwietnia 2025</td>
 			</tr>
 			<tr>
 				<th scope="row">17</th>
-				<td>20 marca 2025</td>
+				<td>24 kwietnia 2025</td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk1/zajecia/9">5과. 빵하고 우유를 사요</a></td>
+				<td class="schedule-presentation" rowspan="2"><!--a href="viiilo/zajecia/24-25z/jk1/zajecia/9-1"></a--></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
-				<td>27 marca 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>15 maja 2025</td>
 			</tr>
 			<tr>
 				<th scope="row">19</th>
-				<td>3 kwietnia 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">20</th>
-				<td>10 kwietnia 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">21</th>
-				<td>24 kwietnia 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">22</th>
-				<td>15 maja 2025</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">23</th>
 				<td>22 maja 2025</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">24</th>
+				<th scope="row">20</th>
 				<td>29 maja 2025</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">25</th>
+				<th scope="row">21</th>
 				<td>5 czerwca 2025</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">26</th>
+				<th scope="row">22</th>
 				<td>12 czerwca 2025</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">27</th>
+				<th scope="row">23</th>
 				<td>26 czerwca 2025</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
