--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -117,8 +117,8 @@
 				<th scope="row">13</th>
 				<td>21 lutego 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7">07. 제주도에 가려고 해요</a></td>
-				<td class="schedule-presentation" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7-1">한반도 지리 (geografia Półwyspu Koreańskiego)</a></td>
+				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7">07. 제주도에 가려고 해요</a></td>
+				<td class="schedule-presentation" rowspan="3"><a href="viiilo/zajecia/24-25z/jk2/zajecia/7-1">한반도 지리 (geografia Półwyspu Koreańskiego)</a></td>
 			</tr>
 			<tr>
 				<th scope="row">14</th>
@@ -126,96 +126,61 @@
 				<td class="schedule-lecture">Lekcja</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">15</th>
-				<td rowspan="2">7 marca 2025</td>
+				<th scope="row">15</th>
+				<td>15 kwietnia 2025</td>
+				<td class="schedule-lecture">Lekcja</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="2">16</th>
+				<td rowspan="2">25 kwietnia 2025</td>
 				<td class="schedule-exam">Sprawdzian</td>
 				<td class="schedule-exam">1~7과</td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">16</th>
-				<td>14 marca 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/8">08. 지난번 여행보다 좋았어요</a></td>
+				<td class="schedule-presentation" rowspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">17</th>
-				<td>21 marca 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">18</th>
-				<td>28 marca 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">19</th>
-				<td>4 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">20</th>
-				<td>11 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">21</th>
-				<td>25 kwietnia 2025</td>
-				<td class="schedule-lecture">Lekcja</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<th scope="row">22</th>
 				<td>16 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">23</th>
+				<th scope="row">18</th>
 				<td>23 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">24</th>
+				<th scope="row">19</th>
 				<td>30 maja 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">25</th>
+				<th scope="row">20</th>
 				<td>6 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">26</th>
+				<th scope="row">21</th>
 				<td>13 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row">27</th>
+				<th scope="row">22</th>
 				<td>27 czerwca 2025</td>
 				<td class="schedule-lecture">Lekcja</td>
 				<td class="schedule-lecture"></td>
