--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -145,63 +145,67 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Iraida Moskaliuk</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Alicja Kozłowska</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Karolina Kruk</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Łukasz Jeruzal</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 5</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Paweł Opyrchał</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Oliwia Urbanik</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Natalia Lupa</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Natalia Nowak</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 9</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Oliwia Kowalczyk</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="5">13</th>
-				<td rowspan="5">27 stycznia 2026</td>
+				<th scope="row" rowspan="6">13</th>
+				<td rowspan="6">27 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 10</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Matylda Rzadkowska</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Beniamin Bracki</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Emil Baran</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 13</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Marta Rezmer</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 14</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Jakub Kmiecik</td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 15</td>
+				<td class="schedule-presentation">Jan Krzyżaniak</td>
 			</tr>
 		</tbody>
 	</table>
