--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -95,7 +95,7 @@
 			<tr>
 				<th scope="row" rowspan="2">4</th>
 				<td rowspan="2">28 października 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 1</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25z/ljk4/testy/1">Kolokwium 1</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 4</td>
