--- a/uj/zajecia/24-25z/ljk4/testy/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/testy/1/index.html
@@ -20,7 +20,7 @@
 	</ul>
 	<p>책을 많이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 지식을 쌓을 수 있다.</p>
 	<ol>
-		<li>읽으면</li>
+		<li>읽으면 <strong class="correct">✓</strong></li>
 		<li>읽든지</li>
 		<li>읽지만</li>
 		<li>읽거나</li>
@@ -39,7 +39,7 @@
 	</ul>
 	<p>다음 주가 개강이니 방학도 다 <u>끝난 거나 마찬가지이다</u>.</p>
 	<ol>
-		<li>끝난 셈이다</li>
+		<li>끝난 셈이다 <strong class="correct">✓</strong></li>
 		<li>끝난 탓이다</li>
 		<li>끝나기 마련이다</li>
 		<li>끝나기 나름이다</li>
@@ -65,7 +65,7 @@
 	</div>
 	<ol>
 		<li>상품 안내</li>
-		<li>주의 사항</li>
+		<li>주의 사항 <strong class="correct">✓</strong></li>
 		<li>사용 순서</li>
 		<li>장소 문의</li>
 	</ol>
@@ -91,7 +91,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/testy/1/img/4.png" alt="4">
 	</div>
 	<ol>
-		<li>주말에는 이용 요금을 더 받는다.</li>
+		<li>주말에는 이용 요금을 더 받는다. <strong class="correct">✓</strong></li>
 		<li>캠핑장은 1년 내내 이용할 수 있다.</li>
 		<li>예약은 이용 당일 홈페이지에서 하면 된다.</li>
 		<li>주차장을 이용하려면 돈을 따로 내야 한다.</li>
@@ -123,7 +123,7 @@
 		<p>최근 한 아파트에서는 힘들게 일하는 택배 기사, 청소원 등을 위한 무료 카페를 열어서 화제가 되고 있다. 이 카페는 언제든 부담 없이 음료를 마시면서 쉴 수 있는 곳이어서 이용자들이 만족해하고 있다. 주민들은 처음에는 관심을 안 보였지만 지금은 카페에 음료와 간식을 제공하는 등 많은 도움을 주고 있다.</p>
 	</div>
 	<ol>
-		<li>이 카페에 간식을 가져다주는 주민들이 생겼다.</li>
+		<li>이 카페에 간식을 가져다주는 주민들이 생겼다. <strong class="correct">✓</strong></li>
 		<li>카페를 열 때 아파트 주민들이 적극적으로 도왔다.</li>
 		<li>이 카페는 아파트 주민들이 돈을 벌기 위해서 열었다.</li>
 		<li>택배 기사들이 카페의 운영에 참여해 화제가 되고 있다.</li>
@@ -161,7 +161,7 @@
 		<li>(가)-(라)-(나)-(다)</li>
 		<li>(가)-(다)-(라)-(나)</li>
 		<li>(라)-(나)-(다)-(가)</li>
-		<li>(라)-(다)-(가)-(나)</li>
+		<li>(라)-(다)-(가)-(나) <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -197,7 +197,7 @@
 		<li>학생들의 이름을 빨리 기억하기 위한</li>
 		<li>수업의 단계를 동일하게 맞추기 위한</li>
 		<li>수업의 진행을 좀 더 부드럽게 하기 위한</li>
-		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한</li>
+		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -210,14 +210,14 @@
 	<ol>
 		<li>비록</li>
 		<li>물론</li>
-		<li>만약</li>
+		<li>만약 <strong class="correct">✓</strong></li>
 		<li>과연</li>
 	</ol>
 	<h3>9. 이 글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
 		<li>안내견이 주인 곁을 떠나는 경우는 없다.</li>
 		<li>안내견은 문제가 생기면 구조 센터로 달려간다.</li>
-		<li>안내견이 다가오는 것은 위급한 상황이 생겼다는 뜻이다.</li>
+		<li>안내견이 다가오는 것은 위급한 상황이 생겼다는 뜻이다. <strong class="correct">✓</strong></li>
 		<li>안내견은 항상 주변의 사람들에게 관심을 갖도록 훈련을 받는다.</li>
 	</ol>
 </div>
