--- a/uj/zajecia/24-25l/mkmb/class/10/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/10/index.html
@@ -46,17 +46,8 @@
 <h3>번역</h3>
 
 <p>0-1. 중1 손에 대용량 커피…"싸고 덜 졸려서" 매일 사먹는 아이들</p>
-<ul>
-	<li>Large coffee in the hand of a first year middle schooler - "It's cheap and makes me less sleepy" - children drinking coffee everyday</li>
-</ul>
 <p>0-2. 고카페인 성장에 방해…학교·학원가 일대 저가형 카페서 쉽게 구매</p>
-<ul>
-	<li>High caffeine intake hinders development - cheap coffee can easily be found all around schools and private academies</li>
-</ul>
 <p>0-3. 대용량 한 잔만 마셔도 청소년 섭취 권고량 훌쩍…"특별 지도 필요"</p>
-<ul>
-	<li>Even if one drinks only a single cup, the amount is well over the recommended intake for teenagers - "They need special guidance"</li>
-</ul>
 
 <h3>어휘</h3>
 
@@ -74,25 +65,11 @@
 <h3>번역</h3>
 
 <p>1. "학원 근처에 저가 커피를 파는 카페가 4군데 정도 되거든요.</p>
-<ul>
-	<li>„We've got maybe four cafés with cheap coffee around the academy.</li>
-</ul>
 <p>2. 마시면 확실히 수업 들을 때 덜 졸려서 자주 사 마셔요."</p>
-<ul>
-	<li>When I drink it, I definitely feel less sleepy in the class, so I do it often".</li>
-</ul>
 <p>3-1. 서울 양천구 목동 학원가에서 만난 중학교 3학년 황모(15) 양은</p>
-<ul>
-	<li>Hwang (15), a third year female middle schooler, whom we met in the area around private academies in Mok-dong, Yangcheon-gu, Seoul,</li>
-</ul>
 <p>3-2. 2학기가 되면서 수면시간을 4시간으로 줄였다.</p>
-<ul>
-	<li>with the beginning of the second semester reduced her sleeping time to 4 hours.</li>
-</ul>
-<p>4-1. 목표로 하는 자율형 사립 고등학교 입시가 코앞으로 다가왔기 때문이다.</p>
-<ul>
-	<li>This is because the entrance examination to her desired autonomous private school is right around the corner.</li>
-</ul>
+<p>4-1. 목표로 하는 자율형 사립 고등학교 입시가</p>
+<p>4-2. 코앞으로 다가왔기 때문이다.</p>
 
 <h3>어휘</h3>
 
@@ -113,33 +90,13 @@
 <h3>번역</h3>
 
 <p>5-1. 이른 저녁을 먹고 학원에 가면</p>
-<ul>
-	<li>After eating an early dinner and going to an academy,</li>
-</ul>
 <p>5-2. 눈꺼풀이 무거워서</p>
-<ul>
-	<li>the children are tired,</li>
-</ul>
 <p>5-3. 수업 전이나 쉬는 시간에 학원 앞 카페에서 대용량 아메리카노를 사 마시는 게 일상이 됐다.</p>
-<ul>
-	<li>thus it has become a habit to bring a large americano before classes or during a break from a cafe located in front of the place.</li>
-</ul>
-<p>6. 초등학교 6학년 때부터 사 먹기 시작한 커피가 지금은 '없으면 안 되는 존재'가 돼버렸다.</p>
-<ul>
-	<li>Coffee, which they begin drinking in the sixth year of elementary school, has now become „something you can’t live without”.</li>
-</ul>
+<p>6-1. 초등학교 6학년 때부터 사 먹기 시작한 커피가</p>
+<p>6-2. 지금은 '없으면 안 되는 존재'가 돼버렸다.</p>
 <p>7-1. 황 양은 "다니는 학원 앞에 워낙 저렴하게 커피를 파는 곳이 많다 보니</p>
-<ul>
-	<li>Hwang said: “There are a lot of places that sell coffee next to my academy.</li>
-</ul>
 <p>7-2. 처음에는 호기심에 사 마셨다가 이제는 하루에 두어 잔은 마신다.</p>
-<ul>
-	<li>At first, I bought and drank it out of curiosity, but now, I drink around two a day.</li>
-</ul>
 <p>8. 중독일 수도 있다"고 말했다.</p>
-<ul>
-	<li>I think I may be addicted.”</li>
-</ul>
 
 <h3>어휘</h3>
 
@@ -164,45 +121,15 @@
 <h3>번역</h3>
 
 <p>9-1. 수학 경시대회를 준비하며 오후 10시까지 학원 수업을 듣는 중1 윤모(13) 군도</p>
-<ul>
-	<li>A boy named Yoon (13), who is in the first year of middle school, is also taking classes at the academy until 10 PM in preparation for a mathematics olympiad.</li>
-</ul>
 <p>9-2. 요즘 하루도 빠지지 않고 대용량 커피를 한 잔씩 사 마신다고 했다.</p>
-<ul>
-	<li>He said that those days he drank one large coffee every day with no exceptions.</li>
-</ul>
 <p>10-1. 윤 군은 "학원 수업이 밤늦게 끝나는데</p>
-<ul>
-	<li>Yoon said with a smile: "As my academy classes end late,</li>
-</ul>
 <p>10-2. 졸리면 버티기 힘들어서 커피를 마시기 시작했다"며</p>
-<ul>
-	<li>I started drinking coffee, because it was hard for me to stay awake.</li>
-</ul>
 <p>10-3. "달달한 게 당겨서 오늘은 카페 모카를 샀다"고 웃으며 말했다.</p>
-<ul>
-	<li>"I craved something very sweet, so today I've bought a mocha".</li>
-</ul>
 <p>14-1. 윤 군은 "집에 가서 잠을 못 잔다거나 그런 증상을 겪은 적은 없지만 심장이 '쿵쿵' 빠르게 뛸 때는 있다"면서도</p>
-<ul>
-	<li>He also said: "I haven't experienced problems with sleeping after going home, but my heart sometimes pounds quickly.</li>
-</ul>
 <p>14-2. "그래도 학원 쉬는 시간에 빠르게 내려와 살 수 있고 효과가 있는 것 같아 자주 사 마신다"고 했다.</p>
-<ul>
-	<li>Still, since I can run down fast and buy the coffee during breaks at the academy, and it works, I buy it often.</li>
-</ul>
 <p>15-1. 아이스라떼를 손에 들고 있던 중1 이모(13) 양은</p>
-<ul>
-	<li>First grade middle school student Lee (13), who was holding an ice latte in her hand,</li>
-</ul>
 <p>15-2. "요즘엔 (학교 주변에) 떡볶이집보다 'XX커피' 같은 카페가 훨씬 많다"며</p>
-<ul>
-	<li>said: "these days (next to the academy) there are many more cafes than tteokbokki places.</li>
-</ul>
 <p>15-3. "학교에서 커피 음료를 안 판다고 해서 (학생들이) 커피를 안 마시는 건 아니다"라고 말했다.</p>
-<ul>
-	<li>Just because caffeinated drinks aren't sold at school doesn't mean (students) don't drink coffee.</li>
-</ul>
 
 <h3>어휘</h3>
 
