--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -113,7 +113,7 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>6월 13일 <nobr>(9:45–14:45)</nobr></td>
-				<td class="schedule-lecture" colspan="2">10과. 취미가 같은 사람을 만나고 싶었어요</td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/24-25l/klc2/class/10">10과. 취미가 같은 사람을 만나고 싶었어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
