--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -59,7 +59,7 @@
 			<tr>
 				<th scope="row">6</th>
 				<td>2025년 11월 19일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/3">9. 공원에서 산책했어요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="4"><a href="viiilo/zajecia/25-26/jk2/zajecia/3">9. 공원에서 산책했어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
@@ -68,22 +68,19 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>2025년 12월 3일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
 				<td>2025년 12월 10일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
 				<td>2025년 12월 17일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/4">10. 우리 같이 놀이공원에 갈까요?</a></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
 				<td>2026년 1월 7일</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row">12</th>
