--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -146,63 +146,63 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 1</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Łukasz Jeruzal</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Yuliia Tsybulko</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Bartłomiej Kura</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 4</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Beniamin Bracki</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 January 2026</td>
 				<td class="schedule-presentation">Presentation 5</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Wiktoria Wabik</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 6</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Julia Zioło</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Matylda Arcisz</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 8</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Magdalena Luzar</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 9</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Hanna Chomen</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="5">13</th>
 				<td rowspan="5">27 January 2026</td>
 				<td class="schedule-presentation">Presentation 10</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Zofia Kobylińska</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 11</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Marta Gałązkiewicz</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 12</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Aleksandra Janowska</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 13</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Amelia Denasiewicz</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 14</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Zuzanna Szczypczyk</td>
 			</tr>
 		</tbody>
 	</table>
