--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/3/index.html
@@ -278,52 +278,52 @@
 	<tr>
 		<td>公文</td>
 		<td>(보건복지부, 단체, 보내다)</td>
-		<td></td>
+		<td>보건복지부에서는 최근에 청년단체에 건강유지 관련 <strong>공문(公文)</strong>을 보냈습니다.</td>
 	</tr>
 	<tr>
 		<td>論文</td>
 		<td>(심사, 합격하다, 졸업하다)</td>
-		<td></td>
+		<td>대학원을 졸업하려면 먼저 석사<strong>논문(論文)</strong> 심사에 합격해야 돼요.</td>
 	</tr>
 	<tr>
 		<td>本文</td>
 		<td>(머리말, 맺음말)</td>
-		<td></td>
+		<td>좋은 작문을 쓰기 위해서는 머리말, <strong>본문(本文)</strong>과 맺은말을 잘 써야 돼요.</td>
 	</tr>
 	<tr>
 		<td>英文</td>
 		<td>(계약서, 국문, 작성하다)</td>
-		<td></td>
+		<td>한국 회사들이 외국 회사와 계약서를 작성할 때는 <strong>영문(英文)</strong>과 국문으로 내용을 써야 한다.</td>
 	</tr>
 	<tr>
 		<td>例文</td>
 		<td>(통하다, 단어를 외우다)</td>
-		<td></td>
+		<td>언어를 공부할 때는 <strong>예문(例文)</strong> 만들기를 통해서 단어를 더 쉽게 외울 수 있어요.</td>
 	</tr>
 	<tr>
 		<td>作文</td>
 		<td>(쓰기 수업, 실력)</td>
-		<td></td>
+		<td>쓰기 수업 덕분에 <strong>작문(作文)</strong> 쓰기 실력이 좋아지고 있어요.</td>
 	</tr>
 	<tr>
 		<td>注文</td>
 		<td>(인터넷, 제품, 저렴하다)</td>
-		<td></td>
+		<td>제품을 저렴하게 구매하려면 인터넷에서 <strong>주문(注文)</strong>하는 것이 제일이다.</td>
 	</tr>
 	<tr>
 		<td>漢文</td>
 		<td>(중학교, 선택과목)</td>
-		<td></td>
+		<td><strong>한문(漢文)</strong>은 중학교에서 선택과목이에요.</td>
 	</tr>
 	<tr>
 		<td>原文</td>
 		<td>(번역, 차이, 의역)</td>
-		<td></td>
+		<td><strong>원문(原文)</strong>을 의역하면 번역에 많은 차이가 있을 수 있다.</td>
 	</tr>
 	<tr>
 		<td>案內文</td>
 		<td>(박물관, 여러 언어)</td>
-		<td></td>
+		<td>박물관에 있는 <strong>안내문(案內文)</strong>이 여러 언어로 작성되어 있어요.</td>
 	</tr>
 </table>
 
