--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
@@ -119,52 +119,55 @@
 	<tr>
 		<td>食器</td>
 		<td>(깨끗하다, 씻다, 보관하다)</td>
-		<td></td>
+		<td>우리 집에서는 식사한 후에 아버지께서 <strong>식기(食器)</strong>를 깨끗이 씻고 보관하셔요.</td>
 	</tr>
 	<tr>
 		<td>食堂</td>
 		<td>(회식, 고급스럽다, 먹다)</td>
-		<td></td>
+		<td>혹시 한번 같이 고급스러운 <strong>식당(食堂)</strong>에서 회식을 할까요?</td>
 	</tr>
 	<tr>
 		<td>食費</td>
 		<td>(생활비, 비중, 크다)</td>
-		<td></td>
+		<td><strong>식비(食費)</strong>는 생활비에서 큰 비중을 차지한다.</td>
 	</tr>
 	<tr>
-		<td>食口</td>
-		<td>(명절, 온, 모이다)</td>
-		<td></td>
+		<td rowspan="2">食口</td>
+		<td rowspan="2">(명절, 온, 모이다)</td>
+		<td>설날이라고 하는 명절 때는 온 식구(食口)</strong>가 한 집에서 모이는 것이 한국 전통이에요.</td>
+	</tr>
+	<tr>
+		<td>명절이면 온 <strong>식구(食口)</strong>가 한 자리에서 모여요.</td>
 	</tr>
 	<tr>
 		<td>食糧</td>
 		<td>(전쟁, 난민, 절실하다)</td>
-		<td></td>
+		<td>전쟁에서 달아나는 난민들에게는 <strong>식량(食糧)</strong>이 절실합니다.</td>
 	</tr>
 	<tr>
 		<td>食事</td>
 		<td>(건강, 규칙적, 필수)</td>
-		<td></td>
+		<td>건강을 유지하기 위해서는 규칙적인 <strong>식사(食事)</strong>가 필수예요.</td>
 	</tr>
 	<tr>
 		<td>食慾</td>
 		<td>(더위, 먹다, 떨어지다)</td>
-		<td></td>
+		<td>날씨가 너무 더우면 <strong>식욕(食慾)</strong>이 떨어져서 아무것도 먹고 싶지 않아요.</td>
 	</tr>
 	<tr>
 		<td>食醋</td>
 		<td>(간장과 고춧가루, 양념장, 만들다)</td>
-		<td></td>
+		<td>간장과 고춧가루로 양념장을 만든 후 <strong>식초(食醋)</strong>를 조금 넣었어요.</td>
 	</tr>
 	<tr>
 		<td>食卓</td>
 		<td>(요즘, 과거, 바닥, 앉다)</td>
-		<td></td>
+		<td>과거에 사람들이 보통 바닥에 앉아서 밥을 먹었지만 요즘은 <strong>식탁(食卓)</strong>을 사용해서 먹어요.</td>
 	</tr>
 	<tr>
 		<td>食品</td>
 		<td>(건강, 관심, 높아지다)</td>
-		<td></td>
+		<td>우리 어머니께서는 시간이 갈수록 건강 <strong>식품(食品)</strong>에 관심이 높아지셨어요.</td>
 	</tr>
 </table>
 
