--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -110,8 +110,8 @@
 			<tr>
 				<th scope="row">2</th>
 				<td>5 March 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">business</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/2">직장인 인사 예절</a></td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
