--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -89,22 +89,14 @@
 				<td class="schedule-lecture" colspan="2">한국인이 불안한 순간 TOP 9</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">3</th>
-				<td rowspan="2">2025년 10월 17일</td>
+				<th scope="row" rowspan="2">3/4</th>
+				<td rowspan="2">2025년 10월 17/24일</td>
+				<td class="schedule-lecture">말하기</td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
+			</tr>
+			<tr>
 				<td class="schedule-lecture">문법</td>
 				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/grammar/1">높임법</a></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="2">말하기</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="2">4</th>
-				<td rowspan="2">2025년 10월 24일</td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">5</th>
