--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -79,18 +79,15 @@
 				<td rowspan="2" class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/1">Introduction to Confucianism</a></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">2</th>
-				<td rowspan="2">14 October 2025</td>
-				<td rowspan="2" class="schedule-lecture">Lecture 2</td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture"></td>
+				<th scope="row">2</th>
+				<td>14 October 2025</td>
+				<td class="schedule-lecture">Lecture 2</td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 October 2025</td>
 				<td class="schedule-lecture">Lecture 3</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/2">The Four Books</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
