--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -85,11 +85,11 @@
 				<th rowspan="2" scope="row">3</th>
 				<td rowspan="2">2025년 10월 22일</td>
 				<td class="schedule-lecture">읽기</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/czytanie/1">시험지 1</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">한자</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/ljk4/zajecia/znaki/2">分 나눌 분</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">4</th>
