--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -79,17 +79,15 @@
 				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/1">muzyka</a></td>
 			</tr>
 			<tr>
-				<th rowspan="2" scope="row">2</th>
-				<td rowspan="2">14 października 2025</td>
-				<td rowspan="2" class="schedule-lecture">Zajęcia 2</td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/25-26z/assk/zajecia/2">literatura</a></td>
+				<th scope="row">2</th>
+				<td>14 października 2025</td>
+				<td class="schedule-lecture">Zajęcia 2</td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 października 2025</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/assk/zajecia/2">literatura</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
@@ -153,7 +151,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation">Karolina Kruk</td>
+				<td class="schedule-presentation">Karolina Kruk - Tradycyjny obiad w Polsce i Korei</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
